New Requriement added in project and remove extra code

--- a/MusicControllerWeb/Areas/Admin/Views/AspNetUserRole/Edit.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/AspNetUserRole/Edit.cshtml
@@ -3,10 +3,11 @@
 @{
     ViewData["Title"] = "Edit";
 }
-<h4>Add New User Role</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row card-body">
+    <div class="col-sm-3">
+    </div>
+    <div class="col-sm-6 border p-5 white-color">
+        <h4 class="text-center">Edit User Management</h4>
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="Id" type="hidden" />
@@ -17,27 +18,30 @@
             </div>
             <div class="form-group">
                 <label asp-for="Role" class="control-label"></label>
-                <select asp-for="Role" asp-items="@ViewBag.Roles" class="form-control" >
+                <select asp-for="Role" asp-items="@ViewBag.Roles" class="form-control">
                     <option selected disabled>Please select Role</option>
                 </select>
                 <span asp-validation-for="Role" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IsAuthorized" class="control-label"></label>
-                <input asp-for="IsAuthorized" class="form-control" />
+                <label  class="control-label"></label>
+                <label asp-for="IsAuthorized">
+                    <input asp-for="IsAuthorized" class="form-check-inline">@Html.DisplayNameFor(e=>e.IsAuthorized)
+                </label>
                 <span asp-validation-for="IsAuthorized" class="text-danger"></span>
             </div>
+          
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
+        <br />
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
