--- a/MusicControllerWeb/Areas/Admin/Views/AspNetUserRole/Index.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/AspNetUserRole/Index.cshtml
@@ -3,45 +3,50 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h1>User Management</h1>
-<table class="table table-bordered table-dark">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsAuthorized)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @if (item.IsAuthorized)
-                    {
-                        <span class="text-success">Authorized</span>
-                    }
-                    else
-                    {
-                        <span class="text-danger">Unauthorised<span class="text-danger">*</span> </span>
-                    }
-                </td>
-                <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+
+<div class="container mt-3">
+    <div class="d-flex">
+        <div class="p-2 flex-grow-1 mr-1">
+            <h1>User Management</h1>
+        </div>
+    </div>
+    <br>
+    <div class="list-group" id="myList">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.IsAuthorized)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Email)
+                        </td>
+                        <td>
+                            @if (item.IsAuthorized)
+                            {
+                                <span class="text-success">Authorized</span>
+                            }
+                            else
+                            {
+                                <span class="text-danger">Unauthorised<span class="text-danger">*</span> </span>
+                            }
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
