--- a/MusicControllerWeb/Areas/Admin/Views/Devices/Index.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Devices/Index.cshtml
@@ -1,59 +1,86 @@
 ﻿@model IEnumerable<DeviceViewModel>
-
 @{
     ViewData["Title"] = "Index";
 }
+<div class="container mt-3">
+    <div class="d-flex">
+        <div class="p-2 flex-grow-1 mr-1">
+            <h2>Devices</h2>
+        </div>
+    </div>
+    <br>
+    <div class="list-group" id="myList">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Outlet)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DeviceId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DeviceDetail)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.StatusMessage)
+                    </th>
+                    @if(User.IsInRole(UserRolesConstant.Admin))
+                    {
+                    <th></th>
+                    }
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Outlet.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DeviceId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DeviceDetail)
+                    </td>
+                    <td>
+                        @if (item.IsApproved)
+                        {
+                            @Html.DisplayFor(modelItem => item.StatusMessage)
+                        }
+                        else
+                        {
+                            <small class="text-primary">Waiting Approval</small>
+                        }
+                    </td>
+                    @if (User.IsInRole(UserRolesConstant.Admin))
+                    {
+                    <td>
 
-<h1>Index</h1>
+                        <div class="form-inline">
+                            @if (!item.IsApproved)
+                            {
+                                <form asp-action="ApproveDevice" asp-controller="Devices" asp-route-id="@item.Id">
+                                    <input type="hidden" asp-for="@item.Id" name="Id" />
+                                    <input type="hidden" value="true" name="ReturnToDevices" />
+                                    <input type="hidden" asp-for="@item.OutletId" name="OutletId" />
+                                    <button class="btn btn-outline-primary btn-sm mr-2"> Approve </button>
+                                </form>
+                            }
+                            <form asp-action="Delete" asp-controller="Devices" asp-route-id="@item.Id">
+                                <input type="hidden" asp-for="@item.Id" name="Id" />
+                                <input type="hidden" asp-for="@item.OutletId" name="OutletId" />
+                                <input type="hidden" value="true" name="ReturnToDevices" />
+                                <button class="btn btn-danger btn-sm"> Remove </button>
+                            </form>
+                        </div>
+                    </td>
+                    }
+                </tr>
+                }
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table table-bordered table-dark" >
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.DeviceDetail)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StatusMessage)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsApproved)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ApprovedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Outlet)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeviceDetail)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StatusMessage)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsApproved)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ApprovedBy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Outlet.Name)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+            </tbody>
+        </table>
+    </div>
+</div>
