--- a/MusicControllerWeb/Areas/Admin/Views/_ViewImports.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using MusicController.Shared.ExtensionMethod;
 @using MusicController.Shared.Constant;
 @using MusicController.Common.Enumerration;
+@using MusicController.Common.Constants;
 @inject CustomUrlHelper _urlHelper
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
