--- a/MusicControllerWeb/Views/Shared/_Layout.cshtml
+++ b/MusicControllerWeb/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using MusicController.Shared.Constant
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -28,8 +29,14 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
+                        @if (User.IsInRole(UserRolesConstant.Admin))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="AspNetUserRole" asp-action="Index">User Management</a>
+                            </li>
+                        }
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="AspNetUserRole" asp-action="Index">User Management</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Devices" asp-action="Index">Device</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Outlets" asp-action="Index">Outlet</a>
@@ -59,7 +66,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - MusicControllerWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - MusicControllerWeb -All rights reserved </a>
         </div>
     </footer>
     <environment include="Development">
