--- a/MusicControllerWeb/Views/_ViewImports.cshtml
+++ b/MusicControllerWeb/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using MusicControllerWeb
 @using MusicControllerWeb.Models
 @using MusicController.Identity.Model
-@using MusicController.Shared.Constant 
+@using MusicController.Shared.Constant
+@using MusicController.Common.Constants
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
