--- a/MusicControllerWeb/Areas/Admin/Views/Playlist/Edit.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Playlist/Edit.cshtml
@@ -78,5 +78,5 @@
         var scheduleValues = "@Model.Schedule";
     </script>
     <script src="~/js/Views/Playlit/Playlist.js"></script>
-    <script src="~/js/Views/Playlit/Tracks.js"></script>
+    <script src="~/js/Views/Tracks/Tracks.js"></script>
 }
