--- a/MusicControllerWeb/Areas/Admin/Views/Tracks/Edit.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Tracks/Edit.cshtml
@@ -46,7 +46,7 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-<script src="https://cdn.jsdelivr.net/momentjs/2.13.0/moment.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/momentjs/2.13.0/moment.min.js"></script>
     <script src="~/js/jquery.timepicker.min.js"></script>
-    <script src="~/js/Views/Playlit/Tracks.js"></script>
+    <script src="~/js/Views/Tracks/Tracks.js"></script>
 }
