--- a/MusicControllerWeb/Views/Shared/Error.cshtml
+++ b/MusicControllerWeb/Views/Shared/Error.cshtml
@@ -1,25 +1,14 @@
 ﻿@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
+    Layout = "/Views/Shared/_LayoutIdentity.cshtml";
 }
-
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+<div class="card-body">
+    <h1 class="text-danger text-center">@Model.StatusCode</h1>
+    <h5 class="card-title text-center">@Model.Message</h5>
+    <hr class="my-4">
+    <h6 class="text-danger">@Model.Description</h6>
+      <br />
+    <a class="btn-info btn btn-block" asp-controller="Outlets" asp-area="Admin" asp-action="Index">Back to home</a>
+    <hr class="my-4">
+</div>
