--- a/MusicControllerWeb/Views/Shared/Error.cshtml
+++ b/MusicControllerWeb/Views/Shared/Error.cshtml
@@ -9,6 +9,6 @@
     <hr class="my-4">
     <h6 class="text-danger">@Model.Description</h6>
       <br />
-    <a class="btn-info btn btn-block" asp-controller="Outlets" asp-area="Admin" asp-action="Index">Back to home</a>
+    <a class="btn-primary rounded-pill btn btn-block" asp-controller="Outlets" asp-area="Admin" asp-action="Index">Back to home</a>
     <hr class="my-4">
 </div>
