--- a/MusicControllerWeb/Areas/Admin/Views/Shared/Components/TrackList/TrackList.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Shared/Components/TrackList/TrackList.cshtml
@@ -15,11 +15,11 @@
                     </div>
                     <div class="col-sm-2 align-content-end">
                         <div class="form-inline">
-                            <button class="btn btn-outline-primary btn-sm mr-2" onclick="location.href='@Url.Action("Edit", "Tracks", new { id = item.Id,area="Admin" })'"> Edit </button>
                             <form asp-action="Delete" asp-controller="Tracks" asp-route-id="@item.Id">
                                 <input type="hidden" name="playlistId" value="@item.PlaylistId" />
                                 <button type="submit" class="btn btn-danger btn-sm">Remove</button>
                             </form>
+                            @*<button class="btn btn-outline-primary btn-sm mr-2" onclick="location.href='@Url.Action("Edit", "Tracks", new { id = item.Id,area="Admin" })'"> Edit </button>*@
                         </div>
                     </div>
                 </div>
