--- a/MusicControllerWeb/Views/Shared/_Layout.cshtml
+++ b/MusicControllerWeb/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
     <environment include="Development">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
+        <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
         @*<script src="~/lib/jquery/dist/jquery.min.js"></script>
             <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
             <script src="~/js/site.js" asp-append-version="true"></script>*@
