--- a/MusicControllerWeb/Areas/Admin/Views/Shared/Components/AddTrack/AddTrack.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Shared/Components/AddTrack/AddTrack.cshtml
@@ -2,15 +2,20 @@
 @model TrackViewModel
 <div class="col-sm-6 border p-5">
     <h4>Add Track</h4><br />
-    <form asp-action="AddTrack"  autocomplete="off"  onsubmit="return onAddTrackSubmitClick(this)" asp-controller="Tracks" method="post">
+    <form asp-action="AddTrack"  autocomplete="off"  onsubmit="return onAddTrackSubmitClick(this)" asp-controller="Tracks" method="post" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly" class="text-danger">
         </div>
         <input asp-for="PlaylistId" type="hidden" />
-        <div class="form-group">
+         <div class="form-group">
+                <label asp-for="File" class="control-label"></label>
+                <input asp-for="File" id="file" onchange="readURL(this)" placeholder="Choose logo" class="form-control" />
+                <span asp-validation-for="File" class="text-danger"></span>
+        </div>
+        @*<div class="form-group">
             <label asp-for="TrackURL"></label>
             <input asp-for="TrackURL" placeholder="Enter Track Url" class="form-control">
             <span asp-validation-for="TrackURL" class="text-danger"></span>
-        </div>
+        </div>*@
         <div class="form-group">
             <label asp-for="FormatedStartTime"></label>
             <input asp-for="FormatedStartTime" class="form-control timepicker" placeholder="Enter Start Time">
