--- a/MusicControllerWeb/Areas/Admin/Views/Shared/Components/AddTrack/AddTrack.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Shared/Components/AddTrack/AddTrack.cshtml
@@ -2,33 +2,43 @@
 @model TrackViewModel
 <div class="col-sm-6 border p-5">
     <h4>Add Track</h4><br />
-    <form asp-action="AddTrack"  autocomplete="off"  onsubmit="return onAddTrackSubmitClick(this)" asp-controller="Tracks" method="post" enctype="multipart/form-data">
-        <div asp-validation-summary="ModelOnly" class="text-danger">
-        </div>
-        <input asp-for="PlaylistId" type="hidden" />
-        <div class="form-group">
-                 <label asp-for="File" class="control-label"></label>
-                <input asp-for="File" id="file" onchange="readURL(this)" placeholder="Choose logo" class="form-control" />
-                <span asp-validation-for="File" class="text-danger"></span>
-        </div>
-        @*<div class="form-group">
+                      <form asp-action="AddTrack" autocomplete="off" onsubmit="return onAddTrackSubmitClick(this)" asp-controller="Tracks" method="post" enctype="multipart/form-data">
+                          <div asp-validation-summary="ModelOnly" class="text-danger">
+                          </div>
+                          <input asp-for="PlaylistId" type="hidden" />
+                          <div class="form-group">
+                              <label asp-for="File" class="control-label"></label>
+                              <input asp-for="File" id="file" onchange="readURL(this)" placeholder="Choose logo" class="form-control" />
+                              <span asp-validation-for="File" class="text-danger"></span>
+                          </div>
+                          <div class="form-group">
+                              <span class="text-info">OR</span>
+                          </div>
+                          <div class="form-group">
+                              <label asp-for="TrackId" class="control-label"></label>
+                              <select asp-for="TrackId" asp-items="@ViewBag.Tracks" class="form-control">
+                                  <option selected disabled>Please select existing track</option>
+                              </select>
+                              <span asp-validation-for="TrackId" class="text-danger"></span>
+                          </div>
+                          @*<div class="form-group">
             <label asp-for="TrackURL"></label>
             <input asp-for="TrackURL" placeholder="Enter Track Url" class="form-control">
             <span asp-validation-for="TrackURL" class="text-danger"></span>
         </div>*@
-        <div class="form-group">
-            <label asp-for="FormatedStartTime"></label>
-            <input asp-for="FormatedStartTime" class="form-control timepicker" placeholder="Enter Start Time">
-            <span asp-validation-for="FormatedStartTime" class="text-danger"></span>
-            <span id="ErrstartTime" class="text-danger" style="display:none;">Start time must be less then End time.</span>
-        </div>
-        <div class="form-group">
-            <label asp-for="FormatedEndTime"></label>
-            <input asp-for="FormatedEndTime" class="form-control timepicker" placeholder="Enter End Time">
-            <span asp-validation-for="FormatedEndTime" class="text-danger"></span>
-            <span id="ErrEndTime" class="text-danger" style="display:none;">End time must be greater then Start time.</span>
-        </div>
-        <br />
-        <button type="submit" class="btn btn-primary">Add Track</button>
-    </form>
+                          <div class="form-group">
+                              <label asp-for="FormatedStartTime"></label>
+                              <input asp-for="FormatedStartTime" class="form-control timepicker" placeholder="Enter Start Time">
+                              <span asp-validation-for="FormatedStartTime" class="text-danger"></span>
+                              <span id="ErrstartTime" class="text-danger" style="display:none;">Start time must be less then End time.</span>
+                          </div>
+                          <div class="form-group">
+                              <label asp-for="FormatedEndTime"></label>
+                              <input asp-for="FormatedEndTime" class="form-control timepicker" placeholder="Enter End Time">
+                              <span asp-validation-for="FormatedEndTime" class="text-danger"></span>
+                              <span id="ErrEndTime" class="text-danger" style="display:none;">End time must be greater then Start time.</span>
+                          </div>
+                          <br />
+                          <button type="submit" class="btn btn-primary">Add Track</button>
+                      </form>
 </div>
