--- a/MusicControllerWeb/Areas/Admin/Views/Devices/Index.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Devices/Index.cshtml
@@ -25,9 +25,12 @@
                     <th>
                         @Html.DisplayNameFor(model => model.StatusMessage)
                     </th>
-                    @if(User.IsInRole(UserRolesConstant.Admin))
+                    <th>
+                        @Html.DisplayNameFor(model => model.StatusPostedAt)
+                    </th>
+                    @if (User.IsInRole(UserRolesConstant.Admin))
                     {
-                    <th></th>
+                        <th></th>
                     }
                 </tr>
             </thead>
@@ -54,28 +57,32 @@
                             <small class="text-primary">Waiting Approval</small>
                         }
                     </td>
+                    <td>
+                        <small> @Html.DisplayFor(modelItem => item.StatusPostedAt)</small>
+                        
+                    </td>
                     @if (User.IsInRole(UserRolesConstant.Admin))
                     {
-                    <td>
+                        <td>
 
-                        <div class="form-inline">
-                            @if (!item.IsApproved)
-                            {
-                                <form asp-action="ApproveDevice" asp-controller="Devices" asp-route-id="@item.Id">
+                            <div class="form-inline">
+                                @if (!item.IsApproved)
+                                {
+                                    <form asp-action="ApproveDevice" asp-controller="Devices" asp-route-id="@item.Id">
+                                        <input type="hidden" asp-for="@item.Id" name="Id" />
+                                        <input type="hidden" value="true" name="ReturnToDevices" />
+                                        <input type="hidden" asp-for="@item.OutletId" name="OutletId" />
+                                        <button class="btn btn-outline-primary btn-sm mr-2"> Approve </button>
+                                    </form>
+                                }
+                                <form asp-action="Delete" asp-controller="Devices" asp-route-id="@item.Id">
                                     <input type="hidden" asp-for="@item.Id" name="Id" />
-                                    <input type="hidden" value="true" name="ReturnToDevices" />
                                     <input type="hidden" asp-for="@item.OutletId" name="OutletId" />
-                                    <button class="btn btn-outline-primary btn-sm mr-2"> Approve </button>
+                                    <input type="hidden" value="true" name="ReturnToDevices" />
+                                    <button class="btn btn-danger btn-sm"> Remove </button>
                                 </form>
-                            }
-                            <form asp-action="Delete" asp-controller="Devices" asp-route-id="@item.Id">
-                                <input type="hidden" asp-for="@item.Id" name="Id" />
-                                <input type="hidden" asp-for="@item.OutletId" name="OutletId" />
-                                <input type="hidden" value="true" name="ReturnToDevices" />
-                                <button class="btn btn-danger btn-sm"> Remove </button>
-                            </form>
-                        </div>
-                    </td>
+                            </div>
+                        </td>
                     }
                 </tr>
                 }
